Prevent grid columns from becoming too wide

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -392,7 +392,7 @@ progress::-moz-progress-bar {
 .catalog {
 	display: grid;
 	gap: 1rem;
-	grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
 	overflow: auto;
 }
 
